static_library("four_axis") {
    sources = [
        "nrf_24l01_spi.c"
        "pwm_contronl.c"
        "JY901B.c"
    ]
    
    cflags = [ "-Wno-unused-variable" ]
    cflags += [ "-Wno-unused-but-set-variable" ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//vendor/hisi/hi3861/hi3861/include"
        "include"
    ]
}
